--- a/src/app/caps-limit/list/list.component.html
+++ b/src/app/caps-limit/list/list.component.html
@@ -21,7 +21,7 @@
                             ID <span *ngIf="sortKey$.value === 'code'">{{ sortDirection$.value === 'asc' ? '↥' : '↧'
                                 }}</span>
                         </th>
-                        <td cdk-cell *cdkCellDef="let row"> {{row.code}} </td>
+                        <td cdk-cell *cdkCellDef="let row"> #{{row.code}} </td>
                         <td cdk-cell *cdkFooterCellDef="let row"> test </td>
                     </ng-container>
 
@@ -60,7 +60,7 @@
                                 class="btn btn-sm btn-primary mr-2">View</button>
                             <button [routerLink]="['edit/' + row.code]"
                                 class="btn btn-sm btn-warning mr-2">Edit</button>
-                            <button class="btn btn-sm btn-danger mr-2">Delete</button>
+                            <button class="btn btn-sm btn-danger mr-2" data-toggle="modal" data-target="#standardModal">Delete</button>
                         </td>
                         <td cdk-cell *cdkFooterCellDef="let row"> test </td>
                     </ng-container>
@@ -82,3 +82,21 @@
         </div>
     </div>
 </div>
+
+         <!-- Modal -->
+         <div class="modal fade modal-notification" id="standardModal" tabindex="-1" role="dialog" aria-labelledby="standardModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document" id="standardModalLabel">
+              <div class="modal-content">
+                <div class="modal-body text-center">
+                    <div class="icon-content">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-alert-triangle"><path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"></path><line x1="12" y1="9" x2="12" y2="13"></line><line x1="12" y1="17" x2="12" y2="17"></line></svg>
+                    </div>
+                    <p class="modal-text">Are you sure wanna delete it ?</p>
+                 </div>
+                <div class="modal-footer justify-content-end">
+                  <button (click)="deleteItem()" class="btn" data-dismiss="modal"><i class="flaticon-cancel-12"></i> Yes</button>
+                  <button type="button"  data-dismiss="modal" class="btn btn-primary">Cancel</button>
+                </div>
+              </div>
+            </div>
+          </div>
