--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -127,13 +127,9 @@
                             <td>5200</td>
                             <td>2011/04/25</td>
                             <td><span class="shadow-none badge badge-primary">Active</span></td>
-                            <td><svg routerLink="/user/details/5" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                    stroke-linecap="round" stroke-linejoin="round"
-                                    class="feather feather-eye table-action">
-                                    <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
-                                    <circle cx="12" cy="12" r="3"></circle>
-                                </svg></td>
+                            <td>
+                                <button routerLink="/user/details/5" class="btn-sm btn-primary">View</button>
+                            </td>
                         </tr>
                         <tr>
                             <td>2</td>
@@ -143,12 +139,9 @@
                             <td>96663</td>
                             <td>2011/07/25</td>
                             <td><span class="shadow-none badge badge-danger">Inactive</span></td>
-                            <td><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" class="feather feather-eye table-action">
-                                    <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
-                                    <circle cx="12" cy="12" r="3"></circle>
-                                </svg></td>
+                            <td>
+                                <button routerLink="/user/details/5" class="btn-sm btn-primary">View</button>
+                            </td>
                         </tr>
                         <tr>
                             <td>3</td>
@@ -158,12 +151,9 @@
                             <td>6222</td>
                             <td>2009/01/12</td>
                             <td><span class="shadow-none badge badge-primary">Active</span></td>
-                            <td><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" class="feather feather-eye table-action">
-                                    <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
-                                    <circle cx="12" cy="12" r="3"></circle>
-                                </svg></td>
+                            <td>
+                                <button routerLink="/user/details/5" class="btn-sm btn-primary">View</button>
+                            </td>
                         </tr>
                         <tr>
                             <td>4</td>
@@ -173,12 +163,9 @@
                             <td>3000</td>
                             <td>2012/03/29</td>
                             <td><span class="shadow-none badge badge-primary">Active</span></td>
-                            <td><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" class="feather feather-eye table-action">
-                                    <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
-                                    <circle cx="12" cy="12" r="3"></circle>
-                                </svg></td>
+                            <td>
+                                <button routerLink="/user/details/5" class="btn-sm btn-primary">View</button>
+                            </td>
                         </tr>
                         <tr>
                             <td>5</td>
@@ -188,12 +175,9 @@
                             <td>6599</td>
                             <td>2008/11/28</td>
                             <td><span class="shadow-none badge badge-primary">Active</span></td>
-                            <td><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" class="feather feather-eye table-action">
-                                    <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
-                                    <circle cx="12" cy="12" r="3"></circle>
-                                </svg></td>
+                            <td>
+                                <button routerLink="/user/details/5" class="btn-sm btn-primary">View</button>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
