--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -3,13 +3,13 @@
   <header class="header navbar navbar-expand-sm">
 
     <ul class="navbar-item theme-brand flex-row  text-center">
-      <li class="nav-item theme-logo">
+      <li class="nav-item theme-logo white-bg">
         <a href="index.html">
-          <img src="assets/cork/assets/img/90x90.jpg" class="navbar-logo" alt="logo">
+          <img src="assets/images/madIcon.svg" class="navbar-logo" alt="logo">
         </a>
       </li>
       <li class="nav-item theme-text">
-        <a href="index.html" class="nav-link"> Wallet </a>
+        <a href="index.html" class="nav-link"> MAD-Wallet Admin </a>
       </li>
     </ul>
 
