--- a/src/app/transaction/list/list.component.html
+++ b/src/app/transaction/list/list.component.html
@@ -27,13 +27,9 @@
                                 </div>
                                 {{ transaction.status }}
                             </td>
-                            <td><svg routerLink="details/{{ transaction.id }}" xmlns="http://www.w3.org/2000/svg"
-                                    width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                                    class="feather feather-eye table-action">
-                                    <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
-                                    <circle cx="12" cy="12" r="3"></circle>
-                                </svg></td>
+                            <td>
+                                <button routerLink="details/{{ transaction.id }}" class="btn btn-primary">View</button>
+                            </td>
                         </tr>
 
                     </tbody>
